--- a/ec2.yml
+++ b/ec2.yml
@@ -5,7 +5,7 @@ Resources:
     Properties:
       ImageId: ami-018d291ca9ffc002f 
       InstanceType: t2.micro
-      KeyName: harish-california
+      KeyName: Naresh
       SecurityGroups:
         - !Ref WebServerSecurityGroup
   WebServerSecurityGroup:
