--- a/pipelineautomation.yml
+++ b/pipelineautomation.yml
@@ -209,7 +209,7 @@ Resources:
      Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
     Source:
      Type: CODEPIPELINE
-     Location: https://git-codecommit.ap-southeast-1.amazonaws.com/v1/repos/nareshravs
+     Location: https://github.com/rayabarapunaresh/poc-project-
      BuildSpec: buildspec.yml
 
   Pipeline:
